Adding styles to index.html and change the menu

--- a/app/components/common/directives/menu/menu.html
+++ b/app/components/common/directives/menu/menu.html
@@ -1,7 +1,6 @@
-<ul>
-    <li><a ui-sref="daily.manage">Daily</a></li>
-    <li><a ui-sref="daily.history">Daily: History</a></li>
-    <li><a ui-sref="daily">Weekly</a></li>
-    <li><a ui-sref="daily">Monthly</a></li>
-    <li><a ui-sref="daily">Yearly</a></li>
+<ul class="nav nav-pills nav-stacked">
+    <li class='active'><a href='#'>Monday vision</a></li>
+    <li><a ui-sref="daily.manage">Daily outcomes</a></li>
+    <li class='disabled'><a href='#'>Friday reflection</a></li>
+    <li><a  ui-sref="daily.history">History</a></li>
 </ul>
