--- a/app/components/common/directives/goal/goalList.html
+++ b/app/components/common/directives/goal/goalList.html
@@ -1,6 +1,5 @@
-<ul>
-    <li ng-repeat="goalItem in goals">
+<ul class="list-group">
+    <li ng-repeat="goalItem in goals" class="list-group-item">
         <goal item="goalItem" />
     </li>
 </ul>
-<input type="button" value="Save"/>
